# inferno

./: .gitmodules  Cargo.toml  LICENSE  README.md
alsa_pcm_inferno/: Cargo.toml  README.md  asoundrc  start_pipewire_sink  stop_pipewire_nodes  test.sh  test_capture.sh  test_effect_processor.sh  test_playback.sh
alsa_pcm_inferno/src/: lib.rs
inferno2pipe/: .editorconfig  Cargo.toml  LICENSE  README.md  save_to_file
inferno2pipe/src/: main.rs
inferno_aoip/: Cargo.toml  rustfmt.toml
inferno_aoip/src/: arc_server.rs  byte_utils.rs  channel_rx_buffer.rs  channels_subscriber.rs  cmc_server.rs  common.rs  device_info.rs  device_server.rs  flows_control_server.rs  flows_rx.rs  flows_tx.rs  info_mcast_server.rs  lib.rs  mdns_client.rs  mdns_server.rs  media_clock.rs  net_utils.rs  os_utils.rs  proxy_to_internal.rs  real_time_box_channel.rs  ring_buffer.rs  samples_collector.rs  samples_utils.rs  state_storage.rs  thread_utils.rs
inferno_aoip/src/protocol/: flows_control.rs  mcast.rs  mod.rs  proto_arc.rs  proto_cmc.rs  req_resp.rs
inferno_wired/: Cargo.toml
inferno_wired/src/: main.rs
