[package]
name = "alsa_pcm_inferno"
version = "0.1.0"
edition = "2021"

[lib]
name = "asound_module_pcm_inferno"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alsa-sys-all = { path = "../alsa-sys-all" }
libc = "0.2.153"
inferno_aoip = { path = "../inferno_aoip" }
env_logger = "0.11.2"
log = "0.4.20"
tokio = { version = "1.36.0", features = ["sync"] }
futures-util = "0.3.30"
lazy_static = "1.5.0"
