[package]
name = "inferno2pipe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
clap = { version = "4.1.13", features = ["derive"] }
inferno_aoip = { path = "../inferno_aoip" }
log = "0.4.17"

[dependencies.tokio]
version = "1.25.0"
features = [ "signal" ]
