[package]
name = "inferno2pipe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
inferno_aoip = { path = "../inferno_aoip" }
log = "0.4"

[dependencies.tokio]
version = "1.36"
features = [ "signal" ]
