[package]
name = "inferno_aoip"
description = "Unofficial implementation of the Dante protocol (Audio over IP)"
authors = ["Teo LumiFaza <teo@lumifaza.org>"]
license = "GPL-3.0-or-later"
keywords = ["AoIP", "audio", "network"]
categories = ["multimedia::audio", "network-programming"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
searchfire = { path = "../searchfire" }
bytebuffer = "2.1.1"
hex = "0.4.3"
binary-layout = "3.1.3"
futures = "0.3.26"
itertools = "0.10.5"
log = "0.4.17"
atomic_enum = "0.2.0"
local-ip-address = "0.5.1"
cirb = { path = "../cirb" }
atomic = "0.5.1"
rand = "0.8.5"
toml = "0.7.3"
platform-dirs = "0.3.0"

[dependencies.serde]
version = "1.0.159"
features = [ "derive" ]

[dependencies.tokio]
version = "1.25.0"
features = [ "net", "time", "sync", "signal" ]
